--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,22 +1,87 @@
 .header {
-    height: 4rem;
     width: 100%;
     text-align: start;
     position: relative;
     background-color: #3c3c3c;
     display: inline-block;
-    vertical-align: middle;
+    z-index: 5;
+    padding-bottom: .04rem;
+    margin-bottom: .02rem;
 }
 
 .logo {
     padding: 1rem;
-    height: 2rem;
+    height: 1.5rem;
     width: auto;
 }
 
-.menuButton {
+.menuButton,
+.closeMenuButton {
     position: absolute;
-    top: 40%;
-    left: 90%;   
+    top: 38%;
+    left: 88%;   
     transform: scale(1.4);
+    cursor: pointer;
+}
+
+.menu {
+    display: flex;
+    list-style: none;
+    position: fixed;
+    width: 60%;
+    height: 100vh;
+    background-color: #3c3c3c;
+    color: #ffffff;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    left: 50%;
+}
+
+.menu.show {
+    display: block;
+}
+
+.hidden {
+    display: none;
+} 
+
+.menuItem  {
+    text-decoration: none;
+    
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    padding-left: 1rem;
+    padding-top: 2rem;
+}
+
+a {
+    text-decoration: none;
+    color: #ffffff;
+    font-family: 'Raleway';
+    font-weight: 700;
+    font-size: 1rem;
+    letter-spacing: 0.25em;
+    line-height: 1rem;    
+    padding-bottom: .6rem;
+    border-bottom: 1px solid #ffffff;
+}
+
+li {
+    padding-bottom: 2rem;
+}
+
+.overlay {
+    position: fixed;
+    width: 50%;
+    height: 100%;
+    z-index: 3;
+    background-color: #000000;
+    opacity: 50%;
+    right: 50%;
 }
