--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,14 +1,13 @@
 .banner {
     position: relative;
     text-align: center;
+    background-color: #a5a5a5;
 }
 
 .banner-img {
     width: 100%;
     height: auto;
-    object-fit: cover;
-    opacity: 75%;
-
+    opacity: 100%;
 }
 
 .textdiv {
@@ -22,7 +21,7 @@
     font-size: 1.25rem;
     line-height: 125%;
     letter-spacing: .1rem;
-    font-weight: 600;
+    font-weight: 700;
     width: 75%;
     text-align: start;
     position: absolute;
