--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,13 +1,14 @@
 .banner {
     position: relative;
     text-align: center;
-    background-color: #a5a5a5;
+    background-color: #ffffff;
 }
 
 .banner-img {
     width: 100%;
     height: auto;
     opacity: 100%;
+    filter: brightness(.8);
 }
 
 .textdiv {
