--- a/src/components/sort_by/SortBy.css
+++ b/src/components/sort_by/SortBy.css
@@ -2,7 +2,9 @@
     width: 100%;
     text-align: end;
     position: relative;
-    padding-top: .8rem;
+    z-index: 5;
+    margin-top: -5rem;
+    padding-top: .3rem;
 }
 
 .options {
