--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -16,3 +16,28 @@
     flex-direction: column;
     gap: .6rem
 }
+
+.loadMoreButton {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: .8rem;
+    height: 1rem;
+    width: 1rem;
+    background-color: #3c3c3c;
+    opacity: 90%;
+    border: none;
+    border-radius: 2rem;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    z-index: 1000;
+    transition: all 0.3s ease;
+
+}
+
+.loadingMoreIcon {
+    height: 1rem;
+    position: absolute;
+}
