--- a/src/components/photo/Photo.css
+++ b/src/components/photo/Photo.css
@@ -1,5 +1,5 @@
 .photoContainer {
-    
+    position: relative;
 }
 
 .photo {
@@ -46,4 +46,14 @@
     max-width: 90%;
     max-height: 75%;
     object-fit: contain;
+}
+
+.likeButton {
+    position: absolute;
+    right: 0;
+    margin: 4%;
+    z-index: 7;
+}
+
+.icon {
 }
