--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,10 +1,8 @@
 .dashboard {
     display: flex;
     gap: .6rem;
-    padding: 1rem;
-    margin-top: -5.3rem;
+    padding: .5rem 1rem;
     background-color: #ffffff;
-    padding-top: 3rem;
     z-index: 4;
     position: relative;
 }
